tests/final/expect/15__diag__axis4_wave6_guard_namespace_collision_reentry_no_crash.diag
Diagnostics:
Error at (520105:12): Undeclared identifier
   Hint: axis4_wave6_guard_collision_symbol
   Spelling: axis4_wave6_guard_collision_layer_a.h:520105:12
Error at (520105:12): Operator '+' requires arithmetic operands
   Spelling: axis4_wave6_guard_collision_layer_a.h:520105:12
